cfn_benchmark/cfn_templates/Tianyi2__IRIS/data/cloudformation_collected_templates_new/template_12576_security-groups.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Network template for security groups

Parameters:
  Project:
    Description: Project name
    Type: String
    AllowedPattern: ^[a-z][a-zA-Z0-9-]{3,20}$
  Component:
    Description: Name of the component
    Type: String
    AllowedPattern: ^[a-z][a-zA-Z0-9-]{3,15}$
  Stage:
    Description: Stage name
    Type: String
    AllowedPattern: ^[a-z][a-zA-Z0-9-]{2,15}$
  VpcId:
    Description: VPC Id
    Type: AWS::SSM::Parameter::Value<String>
  JumpHostAllowedCidrIpBlock:
    Description: CidrIp Block which will be have access open to JumpHost
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    Type: String
  ApplicationPort:
    Description: Port for API Application
    Type: String
  DatabasePort:
    Description: Port for Database
    Type: String

Resources:
  JumpHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for JumpHost
      GroupName: !Sub ${Project}-${Stage}-${Component}-jumphost-sg
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref JumpHostAllowedCidrIpBlock
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Stage}-${Component}-jumphost-sg

  JumpHostSecurityGroupParam:
      Type: AWS::SSM::Parameter
      Properties:
        Type: String
        Description: !Sub Stores ${Project}-${Stage}-${Component} JumpHostSecurityGroup
        Tier: Standard
        Name: !Sub /${Project}/${Stage}/${Component}/jumphost-sg/sg-id
        Value: !Ref JumpHostSecurityGroup
        Tags:
          Name: !Sub ${Project}-${Stage}-${Component}-jumphost-sg

  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for Alb
      GroupName: !Sub ${Project}-${Stage}-${Component}-alb-sg
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Stage}-${Component}-alb-sg

  AlbSecurityGroupParam:
      Type: AWS::SSM::Parameter
      Properties:
        Type: String
        Description: !Sub Stores ${Project}-${Stage}-${Component} AlbSecurityGroup
        Tier: Standard
        Name: !Sub /${Project}/${Stage}/${Component}/alb-sg/sg-id
        Value: !Ref AlbSecurityGroup
        Tags:
          Name: !Sub ${Project}-${Stage}-${Component}-alb-sg

  ApplicationSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for Application
      GroupName: !Sub ${Project}-${Stage}-${Component}-application-sg
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: !Ref ApplicationPort
        ToPort: !Ref ApplicationPort
        SourceSecurityGroupId: !Ref AlbSecurityGroup
      - IpProtocol: tcp
        FromPort: !Ref ApplicationPort
        ToPort: !Ref ApplicationPort
        SourceSecurityGroupId: !Ref JumpHostSecurityGroup
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Stage}-${Component}-application-sg

  ApplicationSecurityGroupParam:
      Type: AWS::SSM::Parameter
      Properties:
        Type: String
        Description: !Sub Stores ${Project}-${Stage}-${Component} ApplicationSecurityGroup
        Tier: Standard
        Name: !Sub /${Project}/${Stage}/${Component}/application-sg/sg-id
        Value: !Ref ApplicationSecurityGroup
        Tags:
          Name: !Sub ${Project}-${Stage}-${Component}-application-sg

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for Database
      GroupName: !Sub ${Project}-${Stage}-${Component}-database-sg
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: !Ref DatabasePort
        ToPort: !Ref DatabasePort
        SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      - IpProtocol: tcp
        FromPort: !Ref DatabasePort
        ToPort: !Ref DatabasePort
        SourceSecurityGroupId: !Ref JumpHostSecurityGroup
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Stage}-${Component}-database-sg

  DatabaseSecurityGroupParam:
      Type: AWS::SSM::Parameter
      Properties:
        Type: String
        Description: !Sub Stores ${Project}-${Stage}-${Component} DatabaseSecurityGroup
        Tier: Standard
        Name: !Sub /${Project}/${Stage}/${Component}/database-sg/sg-id
        Value: !Ref DatabaseSecurityGroup
        Tags:
          Name: !Sub ${Project}-${Stage}-${Component}-database-sg

Outputs:
  JumpHostSecurityGroupId:
    Description: The ID of JumpHost Security group
    Value: !Ref JumpHostSecurityGroup
  JumpHostSecurityGroupParamName:
    Description: The name of the SSM parameter where the Id of the JumpHost Security group is stored
    Value: !Ref JumpHostSecurityGroupParam
  AlbSecurityGroupId:
    Description: The ID of Alb Security group
    Value: !Ref AlbSecurityGroup
  AlbSecurityGroupParamName:
    Description: The name of the SSM parameter where the Id of the Alb Security group is stored
    Value: !Ref AlbSecurityGroupParam
  ApplicationSecurityGroupId:
    Description: The ID of Application Security group
    Value: !Ref ApplicationSecurityGroup
  ApplicationSecurityGroupParamName:
    Description: The name of the SSM parameter where the Id of the Application Security group is stored
    Value: !Ref ApplicationSecurityGroupParam
  DatabaseSecurityGroupId:
    Description: The ID of Database Security group
    Value: !Ref DatabaseSecurityGroup
  DatabaseSecurityGroupParamName:
    Description: The name of the SSM parameter where the Id of the Database Security group is stored
    Value: !Ref DatabaseSecurityGroupParam
